# limon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  environment.yml  pyproject.toml  setup.py
.github/: CODEOWNERS
data/square/: labels.csv  markers.json  square.mesh  square.meshb  square.sol
example/: square.meshb  square.su2
example/cube/: cube.mesh
example/naca0012/: restart_flow.csv
example/square/: labels.json  markers.csv  square.solb
limon/: __init__.py
limon/mesh/: __init__.py  mesh.py  ref_map.cpp  ref_map.hpp  ref_map_bindings.cpp  refine_mesh.py  util.cpp
limon/mesh/common/include/: util.hpp
limon/mesh/common/src/: ref_map.cpp  ref_map_bindings.cpp  util.cpp
limon/mesh/gmf/: io.py  libgmf.cpp
limon/mesh/gmf/include/: element.hpp  mesh.hpp  solution.hpp
limon/mesh/gmf/src/: element.cpp  mesh.cpp  solution.cpp
limon/mesh/refine/: refine.cpp  refine_2d.cpp
limon/mesh/refine/include/: refine_2d.hpp
limon/mesh/refine/src/: refine_2d.cpp
limon/mesh/su2/: io.py  libsu2.cpp
limon/mesh/su2/include/: element.hpp  mesh.hpp  solution.hpp
limon/mesh/su2/src/: element.cpp  mesh.cpp  solution.cpp
limon/metric/src/: integrate.cpp  perturb.cpp  recompose.cpp
limon/numerics/: metric.py
limon/numerics/src/: decompose.cpp  rotation_angle.cpp
limon/operations/: __init__.py  refine.py
limon/operations/include/: refine_2d.hpp  refine_3d.hpp
limon/operations/src/: refine.cpp  refine_3d.cpp
pymeshb/: __init__.py
pymeshb/gamma/: io.py  libmeshb.cpp
pymeshb/mesh/: __init__.py  mesh.py  ref_map.cpp  ref_map.hpp  ref_map_bindings.cpp  util.cpp  util.hpp
pymeshb/mesh/gmf/: __init__.py  element.cpp  element.hpp  io.py  libgmf.cpp  libmeshb.cpp  mesh.cpp  mesh.hpp  solution.cpp  solution.hpp
pymeshb/mesh/gmf/include/: mesh.hpp  solution.hpp
pymeshb/mesh/gmf/src/: element.cpp  mesh.cpp  solution.cpp
pymeshb/mesh/su2/: __init__.py  element.cpp  element.hpp  io.py  libsu2.cpp  marker_map.cpp  marker_map.hpp  mesh.cpp  mesh.hpp  ref_map.cpp  ref_map.hpp  solution.cpp  solution.hpp
pymeshb/mesh/su2/include/: element.hpp  mesh.hpp  solution.hpp
pymeshb/mesh/su2/src/: element.cpp  mesh.cpp  solution.cpp
pymeshb/metric/: __init__.py  decompose.cpp  edge_length.cpp  metric.cpp  metric.py  normalize.cpp  perturb.cpp  recompose.cpp
pymeshb/metric/src/: decompose.cpp  edge_length.cpp  integrate.cpp  normalize.cpp  perturb.cpp  rotation_angle.cpp
test/gamma/: test_io.py
test/mesh/: square.mesh  test_convert.py  test_gmf.py  test_ref.py  test_refine.py  test_su2.py
test/metric/: test_eigen.py  test_metric.py  test_metric_2d.py  test_metric_3d.py
tests/: perturb_metric.py  read_mesh.py  read_write_mesh.py
