[project]
name = "pymeshb"
version = "0.1.0"
description = "Python API to handle the *.meshb file format"
license = "MIT"
authors = [
    {name = "bmunguia", email = "bmunguia@stanford.edu"},
]
readme = "README.md"
keywords = [
    "mesh adaptation",
    "mesh generation",
    "computational fluid dynamics",
    "computational physics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = "~=3.12.1"
dependencies = [
    "docopt==0.6.2",
    "matplotlib==3.9.2",
    "numpy~=2.0.0",
    "pybind11==2.13.6",
    "pyyaml==6.0.2",
    "vtk==9.3.1",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "https://github.com/bmunguia/pymeshb.git"

[build-system]
requires = [
    "cmake>=4.0",
    "poetry-core>=2.1",
    "pybind11",
    "setuptools",
    "numpy",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymeshb"
packages = [
    { include = "pymeshb" }
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pymeshb"]

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--color=yes",
    "-vv",
]
testpaths = ["test"]

[tool.flake8]
max-line-length = 80
indent-size = 4
per-file-ignores = ["__init__.py:F401"]

[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
blank_line_before_nested_class_or_def = false

[tool.ruff]
src = ["su2gym"]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Ignore "Missing docstring in public module"
    "D101",  # Ignore "Missing docstring in public class"
    "D102",  # Ignore "Missing docstring in public method"
    "D103",  # Ignore "Missing docstring in public function"
    "D104",  # Ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"